Replacing some screenshots

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p class="lead">Unlike other apps that keep you in their walled garden, ChatSecure is fully interoperable with other clients that support both OTR and XMPP, such as Adium, Pidgin, Jitsi, and more.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="images/ipad.png" alt="">
+                    <img class="img-responsive" src="images/accounts.png" alt="">
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
                     <ul>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="images/events-screen.png" alt="">
+                    <img class="img-responsive" src="images/android.png" alt="">
                 </div>
             </div>
         </div>
