--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Encrypted Chat</h2>
-                    <p class="lead">Communicate with others securely using OTR encryption over XMPP. You can connect to your existing accounts on Facebook or Google, create new accounts on public XMPP servers, or even connect to your own server for extra security.</p>
-                    <p class="lead">Unlike other apps that keep you in their walled garden, ChatSecure is fully interoperable with other clients that support both OTR and XMPP, such as Adium, Pidgin, Jitsi, and more.</p>
+                    <p class="lead">Communicate with others securely using <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging">OTR</a> encryption over <a href="https://en.wikipedia.org/wiki/XMPP">XMPP</a>. You can connect to your existing accounts on Facebook or Google, create new accounts on public XMPP servers, or even connect to your own server for extra security.</p>
+                    <p class="lead">Unlike other apps that keep you in their walled garden, ChatSecure is fully interoperable with <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging#Client_support">other clients</a> that support both OTR and XMPP, such as <a href="https://www.adium.im">Adium</a>, <a href="http://pidgin.im">Pidgin</a>, <a href="https://jitsi.org">Jitsi</a>, and more.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="images/accounts.png" alt="">
@@ -74,10 +74,10 @@
                     <h2 class="section-heading">Strong Cryptography</h2>
                     <p class="lead">ChatSecure only uses well-known open source cryptographic libraries to keep your conversations secure. Other apps may make claims about "military grade" security but, without publicly auditable source code and verifiable end-to-end encryption, you cannot be truly safe.</p>
                     <ul class="features-list">
-                        <li>XMPP with TLS certificate pinning.</li>
-                        <li>OTR for verifiable end-to-end encryption and forward secrecy.</li>
-                        <li>Tor to help bypass restrictive firewalls.</li>
-                        <li>SQLCipher to locally encrypt conversation logs.</li>
+                        <li>XMPP with <a href="https://en.wikipedia.org/wiki/Transport_Layer_Security#Certificate_pinning">TLS certificate pinning.</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging">OTR</a> for verifiable end-to-end encryption and forward secrecy.</li>
+                        <li><a href="https://en.wikipedia.org/wiki/Tor_(anonymity_network)">Tor</a> to help bypass restrictive firewalls.</li>
+                        <li><a href="https://www.zetetic.net/sqlcipher/design/">SQLCipher</a> to locally encrypt conversation logs.</li>
                     <ul>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
