--- a/i/index.html
+++ b/i/index.html
@@ -62,7 +62,7 @@
                     <p class="lead">Unlike other apps that keep you stuck in their walled garden, ChatSecure is fully interoperable with other clients that support OTR and XMPP, such as <a href="https://conversations.im">Conversations</a> (Android), <a href="https://coy.im">CoyIM</a> (Desktop), and <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging#Client_support">more.</a></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="images/accounts.png" alt="iOS Screenshot">
+                    <img class="img-responsive" src="/images/accounts.png" alt="iOS Screenshot">
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
                     <ul>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="images/chat.png" alt="Chat view screenshot">
+                    <img class="img-responsive" src="/images/chat.png" alt="Chat view screenshot">
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
                     <p class="lead">We believe in the power of free and open source software. The full source code to the <a href="https://github.com/chrisballinger/ChatSecure-iOS">iOS</a> app is available on GitHub.<br><br>Want to get involved? Feel free to send us a pull request!</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="images/github-octocat.png" alt="">
+                    <img class="img-responsive" src="/images/github-octocat.png" alt="">
                 </div>
             </div>
 
